# Odyssey

./: .env.example  .gitignore  README.md  docker-compose.yml
.claude/: settings.json
.playwright-mcp/: page-2026-06-14T16-01-45-561Z.yml  page-2026-06-14T16-02-26-753Z.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1974b81ea46c_init_schema.py  24bedaea9eb0_signals.py  b25d1b567830_bots_and_positions.py  c7e1a2f4b9d0_drop_watchlist.py
backend/app/: config.py  crypto.py  db.py  main.py  models.py  risk.py  schemas.py  seed_tickers.py
backend/app/brokers/: alpaca.py  base.py  fake.py
backend/app/data/: capitol_trades.py  universe.py
backend/app/routers/: accounts.py  activity.py  bots.py  health.py  orders.py  positions.py  signals.py  stocks.py  watchlist.py
backend/app/services/: copy_runner.py  finnhub.py  market_data.py  orders.py  runner.py  scheduler.py  signals_sync.py
backend/app/strategies/: copy_trade.py  trailing_stop.py
backend/fey.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_alpaca_adapter.py  test_alpaca_quote.py  test_api_activity.py  test_api_bots.py  test_api_copy.py  test_api_orders.py  test_api_quotes.py  test_api_signals_sync.py  test_api_stocks.py  test_api_watchlist.py  test_capitol_trades.py  test_config.py  test_copy_runner.py  test_copy_trade.py  test_crypto.py  test_fake_broker.py  test_models.py  test_models_phase2.py  test_models_phase3.py  test_orders_service.py  test_risk.py  test_runner.py  test_scheduler.py  test_signals_sync.py  test_trailing_stop.py
(+77 files in other folders)
